--- a/lift_howto_9786_sql_tpl/src/main/webapp/index.html
+++ b/lift_howto_9786_sql_tpl/src/main/webapp/index.html
@@ -5,10 +5,10 @@
     <title>Home</title>
   </head>
   <body class="lift:content_id=main">
-    <div id="main" class="lift:surround?with=default;at=content">
+    <div id="main" data-lift="surround?with=default;at=content">
       <h2>Welcome to your project!</h2>
       <p>
-	<span class="lift:helloWorld.howdy">
+	<span data-lift="helloWorld.howdy">
 	  Welcome to your Lift app at <span id="time">Time goes here</span>
 	</span>
       </p>
