--- a/lift_howto_9786_sql_tpl/src/main/webapp/templates-hidden/default.html
+++ b/lift_howto_9786_sql_tpl/src/main/webapp/templates-hidden/default.html
@@ -85,11 +85,11 @@ h1 { margin-top:10px; }
 
         <!--<span class="lift:Menu.builder"></span>
         <hr class="space" >-->
-        <span class="lift:Menu.builder?group=main"></span>
+        <span data-lift="Menu.builder?group=main"></span>
         <hr class="space" >
-        <span class="lift:Menu.builder?group=examples"></span>
+        <span data-lift="Menu.builder?group=examples"></span>
         <hr class="space" >
-        <span class="lift:Menu.builder?group=PostingUsers"></span>
+        <span data-lift="Menu.builder?group=PostingUsers"></span>
 
         <div data-lift="Msgs">
           <lift:error_class>errorMsg</lift:error_class>
